correct styling so that copyright doesnt overflow and title never goes missing and u can scroll through the tasks

--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,6 @@ nav {
 
 /* notepad */
 .notepad-parent {
-    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -134,8 +133,6 @@ footer {
     font-size: 0.75rem;
     font-weight: 200;
     width: 100vw;
-    position: absolute;
-    bottom: 0.5rem;
 }
 
 @media (min-width: 700px) {
